@@ -38,6 +38,8 @@
 <p>2017-07-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/png.c (ReadOneJNGImage): Fix double-frees caused by
+commit on 2017-07-06.</li>
 <li>coders/jpeg.c (ReadJPEGImage): Defer creating pixel cache until
 after successfully reading first scanline.  Classify some serious
 libjpeg reported &quot;warnings&quot; as errors and quit processing
